[gd_scene load_steps=6 format=3 uid="uid://o6vk13fe8nhl"]

[ext_resource type="Script" path="res://scenes/new_project/new_project.gd" id="1_cvvaa"]
[ext_resource type="Script" path="res://scenes/new_project/TopGenomeLineEdit.gd" id="2_ed3tn"]
[ext_resource type="Script" path="res://scenes/new_project/BottomGenomeLineEdit.gd" id="3_4xijc"]
[ext_resource type="Script" path="res://scenes/new_project/DirLineEdit.gd" id="4_d64sa"]
[ext_resource type="Script" path="res://scenes/new_project/InfoRichTextLabel.gd" id="5_4kmm3"]

[node name="NewProject" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cvvaa")

[node name="MainVBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TopGenomeContainer" type="HBoxContainer" parent="MainVBoxContainer"]
layout_mode = 2

[node name="TopGenomeLabel" type="Label" parent="MainVBoxContainer/TopGenomeContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Top genome file"

[node name="TopGenomeLineEdit" type="LineEdit" parent="MainVBoxContainer/TopGenomeContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
expand_to_text_length = true
script = ExtResource("2_ed3tn")

[node name="HSeparator" type="HSeparator" parent="MainVBoxContainer"]
layout_mode = 2

[node name="BottomGenomeContainer" type="HBoxContainer" parent="MainVBoxContainer"]
layout_mode = 2

[node name="BottomGenomeLabel" type="Label" parent="MainVBoxContainer/BottomGenomeContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Bottom genome file"

[node name="BottomGenomeLineEdit" type="LineEdit" parent="MainVBoxContainer/BottomGenomeContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
expand_to_text_length = true
script = ExtResource("3_4xijc")

[node name="HSeparator2" type="HSeparator" parent="MainVBoxContainer"]
layout_mode = 2

[node name="CompareContainer" type="HBoxContainer" parent="MainVBoxContainer"]
layout_mode = 2

[node name="CompareLabel" type="Label" parent="MainVBoxContainer/CompareContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Blast options"

[node name="CompareLineEdit" type="LineEdit" parent="MainVBoxContainer/CompareContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "not implemented"
expand_to_text_length = true

[node name="HSeparator3" type="HSeparator" parent="MainVBoxContainer"]
layout_mode = 2

[node name="DirContainer" type="HBoxContainer" parent="MainVBoxContainer"]
layout_mode = 2

[node name="DirLabel" type="Label" parent="MainVBoxContainer/DirContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Project directory"

[node name="DirLineEdit" type="LineEdit" parent="MainVBoxContainer/DirContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
expand_to_text_length = true
script = ExtResource("4_d64sa")

[node name="HSeparator4" type="HSeparator" parent="MainVBoxContainer"]
layout_mode = 2

[node name="CancelOrGoContainer" type="HBoxContainer" parent="MainVBoxContainer"]
layout_mode = 2

[node name="CancelButton" type="Button" parent="MainVBoxContainer/CancelOrGoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Cancel"

[node name="GoButton" type="Button" parent="MainVBoxContainer/CancelOrGoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Go! Go! Go!"

[node name="HSeparator5" type="HSeparator" parent="MainVBoxContainer"]
layout_mode = 2

[node name="InfoRichTextLabel" type="RichTextLabel" parent="MainVBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 100)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 22
fit_content = true
scroll_active = false
script = ExtResource("5_4kmm3")

[connection signal="append_to_info_text" from="." to="MainVBoxContainer/InfoRichTextLabel" method="_on_new_project_append_to_info_text"]
[connection signal="update_bottom_genome_filename" from="." to="MainVBoxContainer/BottomGenomeContainer/BottomGenomeLineEdit" method="_on_new_project_update_bottom_genome_filename"]
[connection signal="update_project_dir" from="." to="MainVBoxContainer/DirContainer/DirLineEdit" method="_on_new_project_update_project_dir"]
[connection signal="update_top_genome_filename" from="." to="MainVBoxContainer/TopGenomeContainer/TopGenomeLineEdit" method="_on_new_project_update_top_genome_filename"]
[connection signal="text_changed" from="MainVBoxContainer/DirContainer/DirLineEdit" to="." method="_on_dir_line_edit_text_changed"]
[connection signal="pressed" from="MainVBoxContainer/CancelOrGoContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="MainVBoxContainer/CancelOrGoContainer/GoButton" to="." method="_on_go_button_pressed"]
